# darkness-engine

./: .gitignore  CMakeLists.txt  main.cpp
resources/: fragment.glsl  vertex.glsl  vertex_batch.glsl
resources/maps/: dev.txt
sources/: Application.cpp  Application.h  Camera.cpp  Camera.h  Context.cpp  Context.h  Darkness.h  Graphics.cpp  Graphics.h  Macros.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  Texture.cpp  Texture.h  Util.cpp  Util.h
sources/game/: Constructor.cpp  Constructor.h  Game.cpp  Game.h  TileMap.cpp  TileMap.h
